--- a/assets/libs/fullcalendar/package.json
+++ b/assets/libs/fullcalendar/package.json
@@ -28,5 +28,8 @@
     "name": "Adam Shaw",
     "email": "arshaw@arshaw.com",
     "url": "http://arshaw.com/"
+  },
+  "dependencies": {
+    "fullcalendar": "file:"
   }
 }
