--- a/assets/libs/swiper/angular/package.json
+++ b/assets/libs/swiper/angular/package.json
@@ -7,6 +7,7 @@
     "@angular/core": "^12.2.0"
   },
   "dependencies": {
+    "swiper_angular": "file:",
     "tslib": "^2.3.0"
   },
   "main": "bundles/swiper_angular.umd.js",
