--- a/assets/libs/swiper/package.json
+++ b/assets/libs/swiper/package.json
@@ -159,6 +159,7 @@
   },
   "dependencies": {
     "dom7": "^4.0.2",
-    "ssr-window": "^4.0.2"
+    "ssr-window": "^4.0.2",
+    "swiper": "file:"
   }
 }
