--- a/template/velzon/assets/libs/@ckeditor/ckeditor5-build-classic/package.json
+++ b/template/velzon/assets/libs/@ckeditor/ckeditor5-build-classic/package.json
@@ -30,6 +30,7 @@
     "@ckeditor/ckeditor5-autoformat": "^31.1.0",
     "@ckeditor/ckeditor5-basic-styles": "^31.1.0",
     "@ckeditor/ckeditor5-block-quote": "^31.1.0",
+    "@ckeditor/ckeditor5-build-classic": "file:",
     "@ckeditor/ckeditor5-ckfinder": "^31.1.0",
     "@ckeditor/ckeditor5-cloud-services": "^31.1.0",
     "@ckeditor/ckeditor5-easy-image": "^31.1.0",
